finish the task

--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>actions with strings</title>
+    <link rel="stylesheet" href="assets/styles/normalize.css" />
+    <link rel="stylesheet" href="assets/styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,400;0,500;1,400&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container__main">
+      <h1>actions with strings</h1>
+      <p id="text">
+        у лукоморья клён зелёный; златая цепь на клён том; и днём и ночью кот
+        учёный; всё ходит по цепи кругом; идёт направо — песнь заводит; налево —
+        сказку говорит; там чудеса: там леший бродит; русалка на ветвях сидит;
+        там на неведомых дорожках; следы невиданных зверей; избушка там на
+        курьих ножках; стоит без окон, без дверей; там лес и дол видений полны;
+        там о заре прихлынут волны; на брег песчаный и пустой; и тридцать
+        витязей прекрасных; чредой из вод выходят ясных; и с ними дядька их
+        морской; там королевич мимоходом; пленяет грозного царя; там в облаках
+        перед народом; через леса, через моря; колдун несёт богатыря; в темнице
+        там царевна тужит; а бурый волк ей верно служит; там ступа с бабою ягой;
+        идёт, бредёт сама собой; там царь кащей над златом чахнет; там русский
+        дух… там русью пахнет!; и там я был, и мёд я пил; у моря видел клён
+        зелёный; под ним сидел, и кот учёный; свои мне сказки говорил.
+      </p>
+      <div class="creator__link-container">
+        <p>
+          site was made by
+          <a href="https://t.me/nika_sirenn" id="creator">nika siren</a>
+        </p>
+        <p>
+          photos by kiran ck, wiser by the mile, kj studio, mediamodifier & doug
+          kelley on unsplash
+        </p>
+      </div>
+    </div>
 
+    <script src="assets/scripts/script.js"></script>
+  </body>
+</html>
